--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <h2>Links to Third-Party Websites</h2>
             <p>Our app may contain links to our Terms and Conditions (AGB) and to external websites or services, such as YouTube or the Google Play Store. When you click on such a link, you will be directed to an external site. We have no control over the collection or processing of personal data by these third-party providers. Please refer to the privacy policies of these third-party services for more information.</p>
             
+            <h2>Additional Information for Users in the USA (California)</h2>
+            <p>This Privacy Policy is designed to comply with global standards, including the California Consumer Privacy Act (CCPA). We do not "sell" or "share" your personal information as those terms are defined under the CCPA. Users from California have the right to know what personal data we collect about them and to request the deletion of their personal data. To exercise these rights, please contact us using the methods described in the "Data Controller" section.</p>
+
             <h2>Changes to This Privacy Policy</h2>
             <p>We reserve the right to adapt this privacy policy so that it always complies with the current legal requirements.</p>
         </div>
@@ -128,6 +131,9 @@
             <h2>Links zu Drittanbietern</h2>
             <p>Unsere App kann Links zu unseren AGB sowie zu externen Webseiten oder Diensten (z.B. YouTube, Google Play Store) enthalten. Wenn Sie auf einen solchen Link klicken, werden Sie auf eine externe Seite weitergeleitet, für deren Datenverarbeitung ausschließlich der jeweilige Anbieter verantwortlich ist. Wir haben keinen Einfluss darauf.</p>
             
+            <h2>Zusätzliche Informationen für Nutzer in den USA (Kalifornien)</h2>
+            <p>Diese Datenschutzerklärung wurde entworfen, um weltweiten Standards zu entsprechen, einschließlich des California Consumer Privacy Act (CCPA). Wir „verkaufen“ oder „teilen“ (im Sinne der Definition des CCPA) Ihre personenbezogenen Daten nicht. Nutzer aus Kalifornien haben das Recht zu erfahren, welche Daten wir über sie sammeln und können deren Löschung beantragen. Um diese Rechte auszuüben, kontaktieren Sie uns bitte über die im Abschnitt „Verantwortlicher“ genannten Wege.</p>
+
             <h2>Änderungen an dieser Datenschutzerklärung</h2>
             <p>Wir behalten uns vor, diese Datenschutzerklärung anzupassen, damit sie stets den aktuellen rechtlichen Anforderungen entspricht.</p>
         </div>
