--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div lang="en">
             <h1>Privacy Policy for TvDimmer - NightCompanion</h1>
-            <p><em>Last updated: September 25, 2025</em></p>
+            <p><em>Last updated: September 27, 2025</em></p>
             
             <h2>Data Controller</h2>
             <p>The party responsible for this app is:<br>
@@ -42,6 +42,9 @@
 
             <h3>Contact via Email</h3>
             <p>When you contact us via email, the data you provide (e.g., email address, name, content of the message) will only be processed for the purpose of handling your request. This data will not be shared without your consent and will be deleted once the request has been fully processed, unless legal retention obligations apply.</p>
+
+            <h3>Crash Reports and Diagnostic Data (Google Play)</h3>
+            <p>To improve the stability and reliability of our app, we use the integrated crash reporting service provided by the Google Play Console (Android Vitals). If the app crashes, anonymized information is sent to Google and made available to us. This data includes, for example, the device type, operating system version, and the stack trace of the crash. This information does not contain any personally identifiable information and is used solely for the purpose of identifying and fixing bugs. The legal basis for this processing is our legitimate interest in maintaining a functional and stable application in accordance with Art. 6(1)(f) GDPR.</p>
 
             <h2>Data Retention</h2>
             <p>We store personal data only as long as necessary for the fulfillment of the stated purposes or as required by law. Data stored in Firebase Authentication is retained until you delete your account. When you delete your account, all personal data in Firebase Authentication will be permanently and irrevocably deleted. If you wish to request the deletion of your personal data, you can contact us at any time using the details provided in the "Data Controller" section. Alternatively, you can find detailed instructions on our <a href="https://luca133K.github.io/datenloeschung.html" target="_blank" rel="noopener noreferrer">Account & Data Deletion</a> page. We will delete your data promptly unless legal retention obligations prevent this.</p>
@@ -79,7 +82,7 @@
         <hr>
         <div lang="de">
             <h1>Datenschutzerklärung für TvDimmer - NightCompanion</h1>
-            <p><em>Stand: 25. September 2025</em></p>
+            <p><em>Stand: 27. September 2025</em></p>
             
             <h2>Verantwortlicher</h2>
             <p>Verantwortlich für diese App ist:<br>
@@ -103,6 +106,9 @@
 
             <h3>Kontaktaufnahme per E-Mail</h3>
             <p>Wenn Sie uns per E-Mail kontaktieren, werden die von Ihnen übermittelten Daten ausschließlich zur Bearbeitung Ihrer Anfrage verarbeitet und danach gelöscht, sofern keine gesetzlichen Aufbewahrungspflichten bestehen.</p>
+
+            <h3>Absturzberichte und Diagnosedaten (Google Play)</h3>
+            <p>Um die Stabilität und Zuverlässigkeit unserer App zu verbessern, nutzen wir den integrierten Absturzberichts-Dienst der Google Play Console (Android Vitals). Im Falle eines Absturzes der App werden anonymisierte Informationen an Google gesendet und uns zur Verfügung gestellt. Dazu gehören beispielsweise der Gerätetyp, die Betriebssystemversion und der Stack Trace des Absturzes. Diese Daten enthalten keine direkt personenbezogenen Informationen und dienen ausschließlich dem Zweck, Fehler zu identifizieren und zu beheben. Die Rechtsgrundlage für diese Verarbeitung ist unser berechtigtes Interesse an der Aufrechterhaltung einer funktionsfähigen und stabilen Anwendung gemäß Art. 6 Abs. 1 lit. f DSGVO.</p>
 
             <h2>Speicherdauer</h2>
             <p>Wir speichern personenbezogene Daten nur so lange, wie es für die genannten Zwecke oder gesetzlich erforderlich ist. Die in Firebase Authentication gespeicherten Daten bleiben bis zur Löschung Ihres Kontos erhalten. Wenn Sie Ihr Konto löschen, werden alle personenbezogenen Daten in Firebase Authentication dauerhaft und unwiderruflich gelöscht. Wenn Sie die Löschung Ihrer Daten wünschen, können Sie uns jederzeit über die im Abschnitt „Verantwortlicher“ genannten Kontaktdaten kontaktieren. Alternativ finden Sie eine detaillierte Anleitung zur Kontolöschung auf unserer Webseite zur <a href="https://luca133K.github.io/datenloeschung.html" target="_blank" rel="noopener noreferrer">Konto- & Datenlöschung</a>. Wir werden Ihre Daten dann unverzüglich löschen, sofern keine gesetzlichen Aufbewahrungspflichten entgegenstehen.</p>
