--- a/agb.html
+++ b/agb.html
@@ -32,11 +32,16 @@
         <p>2. The App is offered in a free basic version and with various "Pro Features" that can be unlocked through one-time in-app purchases.
             <ul>
                 <li>a) <strong>Free Features:</strong> The unrestricted adjustment of the screen brightness (dimming function).</li>
-                <li>b) <strong>Paid Features ("Pro Status"):</strong> The full range of features ("Pro Status") can be unlocked by purchasing various packages, such as individual color filters, the "Silver Package" (unlocking the "Routine" and "Light Mode" features), or "Premium" (unlocking all current and future Pro features). The exact scope of each package is detailed in the App and on the Google Play Store page.</li>
+                <li>b) <strong>Paid Features ("Pro Status"):</strong> The full range of features ("Pro Status") can be unlocked by purchasing various packages:
+                    <ul>
+                        <li><strong>"Night Filter", "Purple Filter", "Red Filter":</strong> The purchase of one of these products permanently unlocks only the respective named color filter.</li>
+                        <li><strong>"Silver Package":</strong> The purchase of this package permanently unlocks the "Routine" feature (automatic schedules) and the light app theme ("Light Mode").</li>
+                        <li><strong>"Premium":</strong> The purchase of this package permanently unlocks <strong>all</strong> current and future "Pro" features, including all color filters, the Routine feature, and the Light Mode.</li>
+                    </ul>
+                </li>
             </ul>
         </p>
         <p>3. <strong>Integrated Safety Mechanism:</strong> The App contains an automatic safety mechanism. The provider endeavors to minimize the theoretical risk of screen damage (e.g., "burn-in") through this mechanism. However, this mechanism does not constitute a guarantee and cannot prevent damage under all circumstances. It does not release the user from their own duty of care. The ultimate responsibility for screen-friendly usage, particularly avoiding the prolonged display of static images, remains with the user.</p>
-
         <h2>§ 3 In-App Purchases & Right of Withdrawal</h2>
         <p>1. Unlocking "Pro" features can be done through in-app purchases via the Google Play Billing Service or by entering a valid redeem code. For in-app purchases, the purchase contract is concluded exclusively between the user and Google Ireland Limited. The processing is subject to the terms of use and payment conditions of Google.</p>
         <p>2. <strong>Right of Withdrawal:</strong> For the purchase of digital content, you generally have a statutory right of withdrawal of 14 days. However, you expressly agree that we shall begin with the execution of the contract before the end of the withdrawal period. You acknowledge that you thereby lose your right of withdrawal upon the immediate activation of the "Pro" feature. Google will obtain this consent as part of the purchase process.</p>
