--- a/TribalApps.html
+++ b/TribalApps.html
@@ -45,6 +45,7 @@
         }
 
     </style>
+    <meta name="google-site-verification" content="tnA0MBbMy4Qmv6LfuQvtghW2nVRmwd3vaSJTn369CIU" />
 </head>
 <body>
     <div class="container">
