--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <div class="product-legal">
                     <a href="https://luca133k.github.io/agb.html">Terms & Conditions</a>
-                    <a href="https://luca133k.github.io/index.html">Privacy Policy</a>
+                    <a href="https://luca133k.github.io/privacy.html">Privacy Policy</a>
                     <a href="https://luca133k.github.io/datenloeschung.html">Data Deletion</a>
                 </div>
             </div>
