--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>
                 <strong>Contact:</strong><br>
                 Email: <a href="mailto:contact.tribalapps@gmail.com">contact.tribalapps@gmail.com</a><br>
-                Official Legal Notice: <a href="https://www.mein.online-impressum.de/tribalapps" target="_blank" rel="noopener noreferrer">mein.online-impressum.de/tribalapps</a>
+                Legal Notice: <a href="https://www.mein.online-impressum.de/tribalapps" target="_blank" rel="noopener noreferrer">mein.online-impressum.de/tribalapps</a>
             </p>
         </div>
 
