--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <p>The official app page for the Android TV app "TvDimmer - NightCompanion".</p>
 
             <div class="product-actions">
-                <a href="[LINK TO TVDIMMER ON PLAY STORE]" class="product-link">View on Google Play</a>
+                <a href="https://play.google.com/apps/testing/com.tribalapps.tvdimmer" class="product-link">View on Google Play</a>
 
                 <div class="product-legal">
                     <a href="https://luca133k.github.io/agb.html">Terms & Conditions</a>
